# solana-60days

./: README.md
day11_sysvar/: Anchor.toml
day11_sysvar/programs/day11/: Cargo.toml
day11_sysvar/tests/: day11.ts  util.ts
day13_event/: Anchor.toml
day13_event/programs/day13_event/: Cargo.toml
day13_event/tests/: day13_event.ts  transaction_list.ts
day14-only-owner/: Anchor.toml
day14-only-owner/programs/day14-only-owner/: Cargo.toml
day14-only-owner/tests/: compute-unit.ts  day14-only-owner.ts
day15_compute_unit/: Anchor.toml
day15_compute_unit/programs/day15_compute_unit/: Cargo.toml
day15_compute_unit/tests/: day15_compute_unit.ts
day16/: Anchor.toml  README.md
day16/programs/day16/: Cargo.toml
day16/tests/: day16.ts  day17_queryaccount.ts  tostr.ts
day1_2/: Anchor.toml  err  package.json  test.sh  tsconfig.json
day1_2/doc/: test.md
day1_2/programs/an5/: Cargo.toml
day1_2/tests/: an5.ts
day23/: Anchor.toml
day23/programs/day23/: Cargo.toml
day23/tests/: day23.ts
day24/: Anchor.toml
day24/programs/day24/: Cargo.toml
day24/tests/: day24.ts  util.ts
day25/keypair_vs_pda/: Anchor.toml
day25/keypair_vs_pda/programs/keypair_vs_pda/: Cargo.toml
day25/keypair_vs_pda/programs/keypair_vs_pda/src/: lib.rs
day26/donate/: Anchor.toml  package-lock.json  package.json
day26/donate/tests/: util.ts  (+1 more)
day26/owner/: Anchor.toml
day3/: anchor_test.sh
day33/bob/: Anchor.toml
day35/spl_token/: .gitignore  Anchor.toml  package-lock.json
day36/token_sale/: Anchor.toml
day4/: Anchor.toml
day4/tests/: day4.ts
doc/: todo.md
(+29 files in other folders)
